# serlog

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: hello.rs
src/: backend.rs  configuration.rs  lib.rs  log.rs  macros.rs  manager.rs  tracing.rs
src/backend/: archiver.rs  memory.rs  os.rs
