[package]
name = "sirlog"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
description = "A async-io-aware structured logging crate for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/sirlog"

publish = false
edition = "2018"
keywords = ["log", "logging"]
categories = ["development-tools::debugging"]
readme = "./README.md"

[features]
default = []
archiver = []
tracing-adapter = ["tracing", "tracing-subscriber"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
flume = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
async-trait = "0.1.38"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "io-std", "io-util"] }
anyhow = "1"
strum = "0.20"
strum_macros = "0.20"
once_cell = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "test-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
